build: 兼容jdk版本的加载jar
(cherry picked from commit 76ad13e7d06156001b7f2373a92d6a64bb040e16)